# FusedSCEquiTensorPot

./: ACTIVE_LEARNING.md  BENCHMARK_RESULTS.md  LAMMPS_INTERFACE.md  MODEL_ARCHITECTURE_ANALYSIS.md  PAPER_CROSS_LAYER_FUSION_THEORY.md  PPT.md  PURE_CARTESIAN_MATH.md  README.md  RESEARCH_PROJECT_SUMMARY.md  THERMAL_TRANSPORT.md  USAGE.md  USAGE_EN.md  benchmark_all_modes_gpu.py  benchmark_all_tensor_product_modes.py  in.green_kubo_kappa  in.mfftorch  mini.xyz  mini_pbc.xyz  mini_pbc_stress.xyz  requirements-cue.txt  requirements.txt  setup.py
data/: cell_val.csv  cell_val.h5  correction_energy_train.csv  correction_energy_train.h5  correction_energy_val.csv  correction_energy_val.h5  fitted_E0.csv  processed_train.h5  processed_val.h5  raw_energy_train.csv  raw_energy_train.h5  raw_energy_val.csv  raw_energy_val.h5  read_train.csv  read_train.h5  read_val.csv  read_val.h5
lammps_user_mfftorch/: README.md
lammps_user_mfftorch/docs/: BUILD_AND_RUN.md
lammps_user_mfftorch/examples/: in.mfftorch_minimal  run_smoke_mfftorch.sh
math/: CROSS_LAYER_FUSION_THEORY.md  PURE_CARTESIAN_MATH.md
molecular_force_field/: __init__.py
molecular_force_field.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: generate_emt_al_thermal_example.py  install_lammps_cpu_python.sh  install_pt271_cu128.sh  install_user_mfftorch_into_lammps.sh  test_ictd_active_learning.sh  test_ictd_parallel_efield_al.sh
scripts/libtorch_smoketest/: CMakeLists.txt  README.md  main.cpp
scripts/mfftorch_engine_smoketest/: CMakeLists.txt  main.cpp
(+111 files in other folders)
